[tool.poetry]
name = "stacksurvey"
version = "0.1.0"
description = "Base repository for Assignment 4"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"
us = "^2.0.2"
pytest = "^7.1.3"
Faker = "^15.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
ipykernel = "^6.15.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]